<resources>
    <string name="app_name">PetAware</string>
    <string name="log_user">Usuario</string>
    <string name="log_pass">Contraseña</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="no_cuenta">No tengo cuenta.</string>
    <string name="meteuser">¿Como te llamas?</string>
    <string name="metepass">Necesitamos una contraseña</string>
    <string name="metemail">¿No tienes Email? Lo necesitamos</string>
    <string name="nolog">Nombre de usuario o contraseña incorrectos.</string>
    <string name="sinpass">¿Olvidaste tu contraseña?</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repassword">Repetir contraseña</string>
    <string name="btn_registro">Enviar datos</string>
    <string name="registrando">Registrando...</string>
    <string name="nopass">La contraseña no coincide</string>
    <string name="noregistro">No se ha podido completar el registro. Vuelva a intentarlo</string>
    <string name="completarperfiltitle">¡Tu perfil está casi listo!</string>
    <string name="guardadatos">Se han guardado tus datos correctamente</string>
    <string name="username">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="btn_complete">Completar mi perfil</string>
    <string name="btn_start">¡Empezar!</string>
    <string name="new_profile_created">¡Tu perfil ha sido creado con éxito!</string>
    <string name="action_settings">Ajustes</string>
    <string name="crear_c">Crear una cuenta</string>
    <string name="title_activity_main_map">MainMapActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="modo_log1">Correo electrónico y contraseña</string>
    <string name="modo_log2">Cuenta de Google</string>
    <string name="or">ó</string>
    <string name="log_options">Opciones de Inicio de Sesión</string>
    <string name="btn_pets">Mascotas</string>
    <string name="btn_map">Mapa</string>
    <string name="btn_profile">Perfil</string>
    <string name="btn_logout">Cerrar Sesion</string>
    <string name="google_map_api">AIzaSyCRGTpx__yJEuFFdNeBRqLGrtl2MEpJ6_A</string>
    <string name="title_activity_esto">esto</string>
    <string name="large_text">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum. Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum. Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum. Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum. Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <string name="event_name">Nombre del evento:</string>
    <string name="event_description">Descripción del evento:</string>
    <string name="btn_accept">Aceptar</string>
    <string name="title_activity_perfil_info">PerfilInfo</string>
    <string name="title_activity_borrar">borrar</string>
    <string name="toast_no_pet_data">Todos los campos deben de estar llenos.</string>
    <string name="toast_no_image">Por favor, introduzca una imagen para la nueva mascota registrada.</string>
    <string name="pet_data">Datos de la mascota</string>
    <string name="complete">    COMPLETAR    </string>
    <string name="select_lost">Seleccione la mascota que se ha perdido</string>
    <string name="select_place">Toque el lugar donde desee crear el marcador</string>
    <string name="toast_pet_select">Seleccione una mascota</string>
    <string name="toast_set_phone">El número de teléfono no es válido</string>
    <string name="toast_pet_deleted">Se ha borrado la mascota de la base de datos</string>
    <string name="toast_marker_created">¡El marcador se ha creado con éxito!</string>
    <string name="save_data">Guardar</string>
    <string name="dialog_delete_marker_title">Borrar Marcador</string>
    <string name="dialog_delete_marker_body">¿Está seguro de que quiere borrar este marcador?</string>
    <string name="yes">SI</string>
    <string name="fab_lost_pet">He perdido mi mascota</string>
    <string name="fab_other_pet">He encontrado una mascota perdida</string>
    <string name="fab_walk_pet">¡Hora del paseo!</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="lost_pet">Mascota Perdida</string>
    <string name="pet_race">Raza</string>
    <string name="plus_info">Información Adicional</string>
    <string name="owner">Dueño</string>
    <string name="details">Rasgos</string>
    <string name="new_pet">Registrar Mascota</string>
    <string name="btn_save">Guardar</string>
    <string name="my_pets">Mis mascotas</string>
    <string name="title_activity_create_marcador_perdida">CreateMarcadorPerdida</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_pruebas">pruebas</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="btn_seen">He visto esta mascota</string>
    <string name="btn_delete">Borrar Mascota</string>
    <string name="hint_phone">Introduzca un teléfono de contacto</string>
    <string name="btn_change_profile">Editar Perfil</string>
    <string name="select_photo">Saque una foto de la mascota</string>
    <string name="enter_characteristics">Introduzca los rasgos de la mascota</string>
</resources>
