<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_options"
        android:textAlignment="center"
        android:textColor="@color/colorNegro"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userPass"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/modo_log1"
            android:textAlignment="center"
            android:textColor="@color/azulInter"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/colorGris"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/googleAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modo_log2"
            android:textAlignment="center"
            android:textColor="@color/azulInter"
            android:textSize="24sp" />
    </LinearLayout>

</FrameLayout>
