<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivities.PerfilUsuario.InfoMascota">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imagen_mascota"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/colorNegro" />

            <TextView
                android:id="@+id/pet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_race"
                android:textColor="@color/colorNegro" />

            <TextView
                android:id="@+id/pet_race"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/colorNegro" />

            <TextView
                android:id="@+id/pet_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"/>

            <Button
                android:id="@+id/btn_borrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/button_background_lleno"
                android:backgroundTint="@color/colorPrimaryDark"
                android:elevation="3dp"
                android:text="@string/btn_delete"
                android:textColor="@android:color/white" />


        </LinearLayout>


</RelativeLayout>