<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anuncio_pantalla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/contenido_ventana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/dialogo_blanco"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/dialogo_blanco"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/new_pet"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorRojoRosaOscuro"
                android:textSize="20sp"
                app:fontFamily="@font/michroma" />


            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/img_nuevamascota"
                android:layout_width="92dp"
                android:layout_height="94dp"
                android:layout_gravity="center|top"
                android:layout_weight="1"
                android:src="@drawable/dog" />

            <EditText
                android:id="@+id/nombre_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/raza_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/pet_race"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/descripcion_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/details"
                android:inputType="textPersonName" />

            <Button


                android:id="@+id/btn_enviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_gravity="center_horizontal|bottom"

                android:background="#ba0063"
                android:text="@string/btn_save"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nocuenta" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
