<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal|top"
            android:layout_marginLeft="16dp"

            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/log_user"
            android:inputType="textEmailAddress"
            android:singleLine="false"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/pass1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"

            android:layout_height="49dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/log_pass"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/nocuenta"
            app:layout_constraintStart_toStartOf="@+id/usuario"
            app:layout_constraintTop_toBottomOf="@+id/usuario" />

        <Button
            android:id="@+id/logbutt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_gravity="center_horizontal|top"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/log_in"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nocuenta" />

        <TextView
            android:id="@+id/nopass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|top"


            android:layout_marginTop="10dp"
            android:text="@string/sinpass"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/logbutt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass1" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nocuenta"
                android:layout_width="match_parent"

                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="3dp"

                android:text="@string/no_cuenta"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/logbutt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass1" />

        </FrameLayout>

    </LinearLayout>


</LinearLayout>